# SecureCloudStorage

./: LICENSE  README.md
client/: CMakeLists.txt
client/AuditAdminClient/: CMakeLists.txt  auditadminwidget.cpp  auditadminwidget.h  auditadminwidget.ui  auditentity.cpp  auditentity.h  resource.qrc
client/AuditAdminClient/resource/: style.qss
client/Login/: CMakeLists.txt  ClickableLabel.cpp  ClickableLabel.h  global.cpp  global.h  loginwidget.cpp  loginwidget.h  loginwidget.ui  main.cpp  resource.qrc
client/Login/LocalLog/: locallogdialog.cpp  locallogdialog.h  locallogdialog.ui  seccloudlog.cpp  seccloudlog.h
client/Login/OnlineUpdate/: onlineupdatedialog.cpp  onlineupdatedialog.h  onlineupdatedialog.ui  onlineupdateoperation.cpp  onlineupdateoperation.h
client/Login/inc/: aes_cbc.h  alg_err.h  base64_dec.h  base64_enc.h  des.h  hmac_md5.h  hmac_sha1.h  hmac_sha256.h  md5.h  sha1.h  sha256.h
client/Login/local_lineedit/: local_lineedit.cpp  local_lineedit.h
client/Login/opensource/: aes_cbc.c  des.c  hmac_md5.c  hmac_sha1.c  hmac_sha256.c  md5.c  rijndeal.c  sha1.c
client/Login/resource/: style.qss
client/SecurityAdminClient/: CMakeLists.txt  resource.qrc  securityadminwidget.cpp  securityadminwidget.h  securityadminwidget.ui  userentitywidget.cpp  userentitywidget.h  userentitywidget.ui
client/SecurityAdminClient/resource/: style.qss
client/SystemAdminClient/: CMakeLists.txt  resource.qrc  systemadminwidget.cpp  systemadminwidget.h  systemadminwidget.ui
client/UserClient/: CMakeLists.txt  icon.rc  operationwidget.cpp  operationwidget.h  operationwidget.ui  securitycloudstorageclientwidget.cpp  securitycloudstorageclientwidget.h  securitycloudstorageclientwidget.ui  tst_testname.cpp
client/UserClient/FileShare/: cancelshare.cpp  cancelshare.h  datashareentity.cpp  datashareentity.h  filesharewidget.cpp  filesharewidget.h  filesharewidget.ui  getsharedlist.cpp  getsharedlist.h  getsharelist.cpp  getsharelist.h
client/UserClient/FileStructureList/: filestructurelist.cpp  filestructurelist.h
client/UserClient/FolderStructureList/: folderstructurelist.cpp  folderstructurelist.h
client/UserClient/SearchResult/: searchresultwidget.cpp  searchresultwidget.h  searchresultwidget.ui
client/UserClient/Test/: functiontest.cpp  functiontest.h  testlogingui.cpp  testlogingui.h
client/UserClient/entities/: filemetadata.cpp  filemetadata.h  localtreewidgetitem.cpp  localtreewidgetitem.h
client/UserClient/lib/include/: cipherinterface.h
client/UserClient/transformentity/: downloadfileentity.cpp  downloadfileentity.h  downloadoperation.cpp  downloadoperation.h  uploadfileentity.cpp  uploadfileentity.h  uploadoperation.cpp  uploadoperation.h
client/UserClient/transformlistform/: downloadlistform.cpp  downloadlistform.h  downloadlistform.ui  transformlistform.cpp  transformlistform.h  transformlistform.ui  uploadlistform.cpp  uploadlistform.h  uploadlistform.ui
client/UserRegister/: CMakeLists.txt  userregisterwidget.cpp  userregisterwidget.h  userregisterwidget.ui
server/SecureCloudStorageSystem/: pom.xml  resource.qrc  tomcat.keystore
server/SecureCloudStorageSystem/src/main/java/com/sklois/SecureCloudStorageSystem/: SecureCloudStorageSystemApplication.java
server/SecureCloudStorageSystem/src/main/java/com/sklois/SecureCloudStorageSystem/actuator/: MyEndpoint.java
server/SecureCloudStorageSystem/src/main/java/com/sklois/SecureCloudStorageSystem/controller/: AuditLogController.java  CheckUpdateController.java  DataListController.java  DataSearchController.java  DataShareController.java  DataTransmissionController.java  GetCipherKeyController.java  RegisterUserController.java  UserListController.java  UserLoginController.java  test.java
server/SecureCloudStorageSystem/src/main/java/com/sklois/SecureCloudStorageSystem/entity/: AuditEntity.java  DataShareEntity.java  Metadata.java  RegisterUser.java
server/SecureCloudStorageSystem/src/main/java/com/sklois/SecureCloudStorageSystem/intercepter/: ActuatorSecurityConfig.java  Auth.java  AuthConfiguration.java  AuthIntercepter.java  MyErrorPageController.java
server/SecureCloudStorageSystem/src/main/java/com/sklois/SecureCloudStorageSystem/publiccloudstorage/: AccessAccount.java
server/SecureCloudStorageSystem/src/main/java/com/sklois/SecureCloudStorageSystem/repository/: AuditRepository.java  DataShareRepository.java  MetadataRepository.java  RegisterUserRepository.java
server/SecureCloudStorageSystem/src/main/java/com/sklois/SecureCloudStorageSystem/securitycloud/: SecurityCloudServiceAccessAccount.java
server/SecureCloudStorageSystem/src/main/java/com/sklois/SecureCloudStorageSystem/service/: AliDockingCloudStorageSerImpl.java  AuditSer.java  AuditSerImpl.java  DataShareSer.java  DataShareSerImpl.java  DatabaseSer.java  DatabaseSerImpl.java  DockingCloudStorageSer.java  DockingSecurityCloudSer.java  DockingSecurityCloudSerImpl.java  MetadataSer.java  MetadataSerImpl.java  SwiftDockingCloudStorageSerImpl.java  UserListSer.java  UserListSerImpl.java
server/SecureCloudStorageSystem/src/main/java/com/sklois/SecureCloudStorageSystem/util/: IpUtil.java  LoginUtil.java
server/SecureCloudStorageSystem/src/main/resources/: application.properties
server/SecureCloudStorageSystem/src/main/resources/static/: angular.min.js  error.html  index.html  index.js
server/SecureCloudStorageSystem/src/test/java/com/sklois/SecureCloudStorageSystem/: SecureCloudStorageSystemApplicationTests.java  hello.docx  test_folderstructurelist.http  testupload.http
